--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "open",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
+  "name": "openstore-proxy",
+  "version": "1.0.0",
+  "description": "Proxy server for OpenStore application",
+  "main": "src/server/server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "start": "node src/server/server.js",
+    "dev": "nodemon src/server/server.js"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "axios": "^1.8.4",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.4.1",
-    "styled-components": "^6.1.16"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.0.3"
-  }
+    "nodemon": "^3.0.3"
+  },
+  "license": "MIT"
 }
