--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "openstore-proxy",
+  "name": "openstore-proxy-server",
   "version": "1.0.0",
-  "description": "OpenStore download proxy server",
-  "main": "proxy.js",
+  "description": "Proxy server for OpenStore application",
+  "main": "server.js",
   "scripts": {
-    "start": "node proxy.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^2.7.0"
+    "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 } 
