--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "openstore-proxy",
-  "version": "1.0.0",
-  "description": "Proxy server for OpenStore application",
-  "main": "src/server/server.js",
+  "name": "open",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "start": "node src/server/server.js",
-    "dev": "nodemon src/server/server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^5.1.0",
+    "i18next": "^25.0.0",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
+    "react-router-dom": "^7.4.1",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
-  },
-  "license": "MIT"
+    "@tauri-apps/cli": "^2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.0.3"
+  }
 }
