--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-fs": "^2.2.1",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-updater": "^2.7.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -20,11 +22,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
-    "react-router-dom": "^7.4.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
+    "@tauri-apps/cli": "^2.5.0",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.3"
   }
