--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,5 +27,6 @@ tauri-plugin-http = "2"
 futures-util = "0.3"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-autostart = "2"
 tauri-plugin-updater = "2"
 
