--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-fs": "^2.3.0",
+    "@tauri-apps/plugin-http": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-store": "^2.2.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -21,9 +24,11 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.4.1",
-    "styled-components": "^6.1.16"
+    "styled-components": "^6.1.16",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@stagewise/toolbar-react": "^0.4.6",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.3"
