--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.5.0",
-    "@tauri-apps/plugin-fs": "^2.3.0",
-    "@tauri-apps/plugin-http": "^2.4.4",
+    "@tauri-apps/plugin-autostart": "^2.3.0",
+    "@tauri-apps/plugin-fs": "^2.2.1",
     "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-store": "^2.2.0",
+    "@tauri-apps/plugin-updater": "^2.7.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -23,13 +23,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
-    "react-router-dom": "^7.4.1",
-    "styled-components": "^6.1.16",
-    "uuid": "^11.1.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
-    "@stagewise/toolbar-react": "^0.4.6",
-    "@tauri-apps/cli": "^2",
+    "@tauri-apps/cli": "^2.5.0",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.3"
   }
