--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@stagewise/toolbar": "^0.4.7",
     "@tauri-apps/api": "^2.5.0",
-    "@tauri-apps/plugin-autostart": "^2.3.0",
-    "@tauri-apps/plugin-fs": "^2.2.1",
+    "@tauri-apps/plugin-fs": "^2.3.0",
+    "@tauri-apps/plugin-http": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-updater": "^2.7.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.4",
+    "mime": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1",
+    "react-router-dom": "^7.4.1",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.5.0",
+    "@tauri-apps/cli": "^2",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.3"
   }
