--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,11 +22,10 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-fs = "2"
 tauri-plugin-http = "2"
-futures-util = "0.3"
-
-[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-autostart = "2"
-tauri-plugin-updater = "2"
+tauri-plugin-fs = "2"
+chrono = { version = "0.4", features = ["serde"] }
+tokio = { version = "1", features = ["full"] }
+dirs = "5.0"
+reqwest = { version = "0.11", features = ["stream"] }
 
