--- a/src/server/package.json
+++ b/src/server/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.2"
+    "express": "^4.18.2",
+    "mime-types": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
