--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@stagewise/toolbar": "^0.4.7",
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-dialog": "^2.2.2",
     "@tauri-apps/plugin-fs": "^2.3.0",
     "@tauri-apps/plugin-http": "^2.4.4",
-    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-opener": "^2.3.0",
+    "@tauri-apps/plugin-os": "^2.2.2",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -25,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
