--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,4 +28,6 @@ chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 dirs = "5.0"
 reqwest = { version = "0.11", features = ["stream"] }
+tauri-plugin-os = "2"
+tauri-plugin-dialog = "2"
 
