--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@stagewise-plugins/react": "^0.5.0",
+    "@stagewise/toolbar": "^0.5.0",
+    "@stagewise/toolbar-react": "^0.5.0",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-dialog": "^2.2.2",
     "@tauri-apps/plugin-fs": "^2.3.0",
@@ -30,8 +33,6 @@
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
-    "@stagewise-plugins/react": "^0.4.9",
-    "@stagewise/toolbar-react": "^0.4.9",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.3"
